--- a/docs/css/vue.css
+++ b/docs/css/vue.css
@@ -306,7 +306,7 @@ body.sticky .sidebar-toggle {
 }
 .markdown-section {
   margin: 0 auto;
-  max-width: 80%;
+  max-width: 800px;
   padding: 30px 15px 40px;
   position: relative;
 }
